--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@
 *.err
 *.out
 data/
-historical/
-ssp370/
-ssp585/
+GFDL-ESM4/
+IPSL-CM6A-LR/
+MPI-ESM1-2-HR/
+MRI-ESM2-0/
+UKESM1-0-LL/
 Step_01_Downloading_ATM_forcing_ssp370.m
 Step_01_Downloading_ATM_forcing_ssp370.csh
 Step_01_Downloading_ATM_forcing_ssp585.m
