--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
 # ignore all logs
 *.log
-*.err
-*.out
+*.stderr*
+*.stdout*
 data/
 GFDL-ESM4/
 IPSL-CM6A-LR/
 MPI-ESM1-2-HR/
 MRI-ESM2-0/
 UKESM1-0-LL/
-Step_01_Downloading_ATM_forcing_ssp370.m
-Step_01_Downloading_ATM_forcing_ssp370.csh
-Step_01_Downloading_ATM_forcing_ssp585.m
-Step_01_Downloading_ATM_forcing_ssp585.csh
+Step_01_Downloading_ATM_forcing_*.m
+Step_01_Downloading_ATM_forcing_cori_*.csh
