--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ MRI-ESM2-0/
 UKESM1-0-LL/
 Step_01_Downloading_ATM_forcing_*.m
 Step_01_Downloading_ATM_forcing_cori_*.csh
+Step_01_Downloading_ATM_forcing_*.csh
