--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ UKESM1-0-LL/
 Step_01_Downloading_ATM_forcing_*.m
 Step_01_Downloading_ATM_forcing_cori_*.csh
 Step_01_Downloading_ATM_forcing_*.csh
+.DS_Store
+.DS_Store
