--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ Step_01_Downloading_ATM_forcing_*.m
 Step_01_Downloading_ATM_forcing_cori_*.csh
 Step_01_Downloading_ATM_forcing_*.csh
 .DS_Store
-.DS_Store
+.ipynb_checkpoints/
